# watchx

./: Cargo.toml  LICENSE  Makefile  README.md  reloadx.yaml  watchx.yaml
src/: command.rs  config.rs  main.rs  processes.rs  watcher.rs
