[package]
name = "watchx"
version = "0.2.1"
edition = "2021"

[profile.release]
# Enable Link-Time Optimization (LTO)
lto = true
# Enable Compiler Optimizations
opt-level = 3
codegen-units = 16

[dependencies]
notify = "8.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
clap = { version = "4.4", features = ["derive"] }
glob = "0.3"
log = "0.4"
env_logger = "0.11"
colored = "3.0.0"
chrono = "0.4"